fix: changement de overflow-x hidden en clip pour rendre le header collant

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,7 +109,7 @@
 html {
   scroll-behavior: smooth;
   font-size: 16px;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 body {
@@ -119,7 +119,7 @@ body {
   line-height: 1.6;
   color: var(--color-text);
   background-color: var(--color-secondary);
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 /* ==========================================
